kanc_pamoi/src/tests/sample_code/should_fail/single_file/parse/illegal_underscore/let.k
type U {
    u: U,
}

let _ = U.u;
